test/data/syntax-errors/missing-end.derp
dile tru dur
  pront 1 derp
